--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <img src="/images/icon-hamburger.svg" alt="menu icon" />
                 <a aria-label="Navigate to home page"  href="#" id="logo">room</a>
             </nav>
-            <img class="slider__image" src="/images/desktop-image-hero-1.jpg" alt="furniture image" />
+            <img class="slider__image" src="images/desktop-image-hero-1.jpg" alt="furniture image" />
         </div>
         <div class="info">
             <div class="info__text">
@@ -34,14 +34,14 @@
         </div>
     </section>
     <section class="about">
-        <img class="about__image" src="/images/image-about-light.jpg" alt="light furniture image" />
+        <img class="about__image" src="images/image-about-light.jpg" alt="light furniture image" />
         <div class="info">
             <div class="info__text">
                 <h2>About our furniture</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet possimus tempore ex hic cum laudantium voluptatum minus autem cumque doloremque dolorem necessitatibus perferendis, quae itaque modi rerum unde soluta explicabo!</p>
             </div>
         </div>
-        <img class="about__image" src="/images/image-about-dark.jpg" alt="dark furniture image" />
+        <img class="about__image" src="images/image-about-dark.jpg" alt="dark furniture image" />
     </section>
 </body>
 </html>
